src/objects/Zip_Code_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Assign_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user that will receive the leads associated to a particular zip code.</description>
        <inlineHelpText>The user that will receive the leads associated to a particular zip code.</inlineHelpText>
        <label>Assign To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Zip_Code_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Behr_InStore_Rep_Email__c</fullName>
        <label>Behr InStore Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Behr_InStore_Rep__c</fullName>
        <label>Behr InStore Rep</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checkbox to indicate the assignment has been manually overridden and for CRM fusion to ignore these stores. This will allow admins to set the store and have it stay to what they want until it can resort back to SAP&apos;s settings.</description>
        <label>Manual Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Store_Number_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store Number Lookup</label>
        <referenceTo>Home_Depot_Store__c</referenceTo>
        <relationshipLabel>Zip Code Assignments</relationshipLabel>
        <relationshipName>Zip_Code_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Store_Number__c</fullName>
        <label>Store Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>The zip code that will be matched against for assignment logic.</description>
        <externalId>true</externalId>
        <inlineHelpText>The zip code that will be matched against for assignment logic.</inlineHelpText>
        <label>Zip Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Zip Code Assignment</label>
    <listViews>
        <fullName>All_Zip_Codes_Assignments</fullName>
        <columns>Store_Number_Lookup__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Zip_Code__c</columns>
        <columns>Assign_To__c</columns>
        <columns>Behr_InStore_Rep__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Zip_Code__c</field>
            <operation>equals</operation>
            <value>00501</value>
        </filters>
        <label>All Zip Codes Assignments</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Zip Code Mappings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zip Code Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>